@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
         <code.version>UTF-8</code.version>
         <project.build.sourceEncoding>${code.version}</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${code.version}</project.reporting.outputEncoding>
@@ -86,6 +86,9 @@
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
+                <configuration>
+                    <release>11</release>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -100,6 +103,9 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
                     <systemPropertyVariables>
                         <env>${env}</env>
                     </systemPropertyVariables>
